--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,9 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-  <h1>
-    Iniciando angular
-  </h1>
-</div>
+<app-header></app-header> <!-- aqui chama o component header -->
+
+<a routerLink="/" >Home</a>
+
+<a routerLink="/about" >About</a>
+
+<router-outlet></router-outlet>
+<!-- <app-contacts></app-contacts> -->
